# abopus

./: Dockerfile  README.md  convert_audiobooks.py  pyproject.toml
.github/workflows/: docker-publish.yml  pypi-publish.yml
src/abopus/: __init__.py  __main__.py  converter.py
