[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "abopus"
version = "0.1.0"
description = "Audiobook to Opus converter — efficient batch conversion optimized for voice content"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
authors = [{ name = "Aleksandr Kadykov" }]
keywords = ["audiobook", "opus", "converter", "ffmpeg", "audio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
]

[project.scripts]
abopus = "abopus.__main__:main"

[project.urls]
Homepage = "https://github.com/kadykov/abopus"
Repository = "https://github.com/kadykov/abopus"
Issues = "https://github.com/kadykov/abopus/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/abopus"]
